--- a/index.css
+++ b/index.css
@@ -147,7 +147,7 @@ header {
 #section3 {
   background-color: #34365a;
   width: 100%;
-  height: 90vh;
+  height: 60vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -159,7 +159,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 50px;
 
     h1 {
       font-size: 2rem;
@@ -180,4 +180,71 @@ header {
       text-transform: uppercase;
     }
   }
+}
+#section4 {
+  width: 100%;
+  background-color: green;
+  height: 200vh;
+  display: flex;
+  justify-content: center;
+  position: relative;
+
+  .container {
+    width: 70%;
+    height: 100vh;
+    background-color: red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: -473px;
+
+    img {
+      width: 50%;
+      position: relative;
+      
+    }
+    .small {
+      width: 25%;
+      height: 40vh;
+      background-color: white;
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      padding: 1rem;
+      gap: 20px;
+      position: absolute;
+      right: 100px;
+      top: 15%;
+
+      button {
+        background-color: #34365a;
+        color: white;
+        border-radius: 1rem;
+        height: 50px;
+        width: 150px;
+        text-transform: uppercase;
+      }
+    }
+    #lower1{
+      width: 100%;
+      height: 30vh;
+      background-color: blue;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      
+
+      .circle{
+        width: 200px;
+        height: 200px;
+        background-color: yellow;
+        border-radius: 50%;
+      
+    
+      }
+    }
+  }
+ 
 }
