--- a/index.css
+++ b/index.css
@@ -182,17 +182,14 @@ header {
   }
 }
 #section4 {
-  width: 100%;
-  background-color: green;
+  width: 95%;
   height: 200vh;
   display: flex;
   justify-content: center;
   position: relative;
 
   .container {
-    width: 70%;
-    height: 100vh;
-    background-color: red;
+    width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -203,11 +200,9 @@ header {
     img {
       width: 50%;
       position: relative;
-      
     }
     .small {
-      width: 25%;
-      height: 40vh;
+      width: 22%;
       background-color: white;
       display: flex;
       flex-wrap: wrap;
@@ -215,8 +210,8 @@ header {
       padding: 1rem;
       gap: 20px;
       position: absolute;
-      right: 100px;
-      top: 15%;
+      right: 200px;
+      top: 198px;
 
       button {
         background-color: #34365a;
@@ -227,24 +222,346 @@ header {
         text-transform: uppercase;
       }
     }
-    #lower1{
-      width: 100%;
-      height: 30vh;
-      background-color: blue;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      
+  }
+  #lower1 {
+    width: 100%;
+    display: flex;
+    padding-top: 100px;
+    align-items: center;
+    justify-content: space-between;
 
-      .circle{
-        width: 200px;
-        height: 200px;
-        background-color: yellow;
+    #container {
+      padding: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 40px;
+
+      .circle1 {
+        width: 180px;
+        height: 180px;
+        background-color: #f1bb13;
         border-radius: 50%;
-      
-    
+      }
+    }
+    #container {
+      padding: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 40px;
+
+      .circle2 {
+        width: 180px;
+        height: 180px;
+        background-color: #f1bb13;
+        border-radius: 50%;
+      }
+    }
+    #container {
+      padding: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 40px;
+
+      .circle3 {
+        width: 180px;
+        height: 180px;
+        background-color: #f1bb13;
+        border-radius: 50%;
+      }
+    }
+    #container {
+      padding: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 40px;
+
+      .circle4 {
+        width: 180px;
+        height: 180px;
+        background-color: #f1bb13;
+        border-radius: 50%;
       }
     }
   }
- 
+}
+#Digital {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  padding-top: 150px;
+
+  .left {
+    width: 50%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+
+    .container5 {
+      width: 50%;
+      height: 20vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      background-color: #f1bb13;
+      border-bottom-left-radius: 50px;
+      border-bottom-right-radius: 50px;
+      text-transform: uppercase;
+    }
+    p {
+      font-size: 1rem;
+      margin: 36px;
+    }
+    span {
+      margin: 36px;
+    }
+    button {
+      background-color: #34365a;
+      color: white;
+      border-radius: 1rem;
+      height: 50px;
+      width: 150px;
+      text-transform: uppercase;
+      margin: 36px;
+    }
+  }
+  .right {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+
+    .girl1 {
+      img {
+        margin: 20px auto 0 0;
+        width: 300px;
+        height: 300px;
+        border-radius: 50%;
+      }
+    }
+
+    #parnet {
+      width: 100%;
+      height: 100vh;
+      display: flex;
+      flex-direction: row;
+
+      .container6 {
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        img {
+          background-color: #34365a;
+          width: 100px;
+          height: 100px;
+          border-radius: 50%;
+        }
+      }
+      .container7 {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+      }
+    }
+    #parent2 {
+      width: 100%;
+      height: 100vh;
+      display: flex;
+      flex-direction: row;
+      .img {
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        img {
+          background-color: #34365a;
+          width: 100px;
+          height: 100px;
+          border-radius: 50%;
+        }
+      }
+      .container8 {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+      }
+    }
+  }
+}
+
+#section5 {
+  width: 100%;
+  .upper {
+    width: 100%;
+    background-color: #f1bb13;
+    display: flex;
+    flex-direction: row;
+    #leftContainer {
+      width: 50%;
+      display: flex;
+      gap: 50px;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      #title {
+        margin: 0 auto;
+        font-size: 1.125rem;
+        font-weight: 400;
+        text-transform: uppercase;
+        letter-spacing: 4px;
+      }
+      h1 {
+        font-size: 3rem;
+        font-weight: 700;
+        margin: 28px 0 0;
+      }
+      p {
+        line-height: 1.8;
+        font-size: 1.25rem;
+        margin: 28px 0 0;
+      }
+      span {
+        margin: 36px;
+      }
+      button {
+        background-color: #34365a;
+        color: white;
+        border-radius: 1rem;
+        height: 50px;
+        width: 150px;
+        text-transform: uppercase;
+      }
+    }
+    #rightContainer {
+      width: 50%;
+      .container9 {
+        display: flex;
+        justify-content: center;
+        align-items: end;
+        padding: 30px;
+
+        img {
+          width: 100%;
+          display: flex;
+          position: relative;
+          top: 2rem;
+        }
+      }
+    }
+  }
+  .lower {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .boxs {
+      width: 60%;
+      height: 70vh;
+      display: flex;
+      justify-content: center;
+      .leftBoxs {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        .box1 {
+          width: 100%;
+          height: 100%;
+          background-color: #f1bb13;
+          background-size: cover;
+          z-index: -1;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          h2 {
+            font-size: 3rem;
+            margin: 0;
+            font-weight: 700;
+            color: #ffffff;
+
+
+          }
+        }
+        .box3 {
+          width: 100%;
+          height: 70%;
+          display: flex;
+
+          #left {
+            width: 50%;
+            height: 100%;
+            background-size: cover;
+          }
+          #right {
+            width: 50%;
+            height: 100%;
+            background-color: #f1bb13;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 35px;
+
+            h2 {
+              margin: 20px;
+              word-wrap: break-word;
+              text-align: left;
+            }
+          }
+        }
+      }
+      .rightBoxs {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        .box2 {
+          width: 100%;
+          height: 80%;
+          background-color: #34365a;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          h1 {
+            font-size: 1.875rem;
+            font-weight: 700;
+            margin: 0;
+            color: white;
+          }
+          p {
+            color: white;
+            margin: 20px;
+          }
+          span {
+            text-transform: capitalize;
+            margin: 20px;
+            color: white;
+          }
+          button {
+            background-color: white;
+            color: #34365a;
+            border-radius: 50px;
+            height: 50px;
+            width: 150px;
+            text-transform: uppercase;
+          }
+        }
+        .box4 {
+          width: 100%;
+          height: 100%;
+          background-size: cover;
+        }
+      }
+    }
+  }
 }
