--- a/index.css
+++ b/index.css
@@ -371,7 +371,6 @@ header {
     }
     #parent2 {
       width: 100%;
-      height: 100vh;
       display: flex;
       flex-direction: row;
       .img {
@@ -483,13 +482,13 @@ header {
           display: flex;
           align-items: center;
           justify-content: center;
+          position: relative;
+
           h2 {
             font-size: 3rem;
             margin: 0;
             font-weight: 700;
             color: #ffffff;
-
-
           }
         }
         .box3 {
@@ -532,6 +531,7 @@ header {
           flex-direction: column;
           justify-content: center;
           align-items: center;
+
           h1 {
             font-size: 1.875rem;
             font-weight: 700;
@@ -563,5 +563,334 @@ header {
         }
       }
     }
+  }
+  svg {
+    color: #f1bb13;
+    width: 20%;
+    position: relative;
+    right: -390px;
+    bottom: 1200px;
+    z-index: -2;
+  }
+}
+#section6 {
+  width: 100%;
+  background-color: #34365a;
+  .upper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .managerImage {
+      width: 100%;
+      img {
+        width: 100%;
+        object-fit: cover;
+      }
+    }
+    #small-container {
+      width: 30%;
+      background-color: #ffffff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      top: -300px;
+      h1 {
+        font-size: 3rem;
+        margin: 12px;
+      }
+      p {
+        font-size: 1.25rem;
+        margin: 27px;
+      }
+      span {
+        margin: 36px;
+      }
+      button {
+        background-color: #34365a;
+        color: white;
+        border-radius: 50px;
+        height: 50px;
+        width: 150px;
+        text-transform: uppercase;
+        margin: 36px;
+      }
+    }
+  }
+  .middle {
+    width: 100%;
+    height: 50%;
+    background-color: #34365a;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    h1 {
+      margin-bottom: 150px;
+      font-size: 3rem;
+      text-align: center;
+      font-family: "Open Sans", sans-serif;
+      color: #ffffff;
+    }
+  }
+
+  #mainImg {
+    width: 50%;
+    position: relative;
+    span {
+      color: #ffffff;
+      font-size: 1rem;
+      position: relative;
+      left: 230px;
+    }
+    img {
+      width: 100%;
+    }
+    .boxs {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      position: absolute;
+      top: -150px;
+      padding: 20px;
+      .box1 {
+        width: 25%;
+        height: 20vh;
+        background-color: #ffffff;
+        padding: 20px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        gap: 20px;
+      }
+
+      #box1-h6 {
+        color: #666666;
+        letter-spacing: 3px;
+        text-transform: uppercase;
+        font-weight: 500;
+        font-size: 10px;
+        margin: 0 auto;
+      }
+
+      #box1-h1 {
+        color: #f1bb13;
+        font-size: 4rem;
+        font-weight: 700;
+        margin: 19px auto 0;
+      }
+
+      .box2 {
+        width: 24%;
+        height: 20vh;
+        background-color: #ffffff;
+        padding: 20px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        gap: 20px;
+      }
+
+      #box2-h6 {
+        color: #666666;
+        letter-spacing: 3px;
+        text-transform: uppercase;
+        font-weight: 500;
+        font-size: 10px;
+        margin: 0 auto;
+      }
+
+      #box2-h1 {
+        color: #f1bb13;
+        font-size: 4rem;
+        font-weight: 700;
+        margin: 19px auto 0;
+      }
+
+      .box3 {
+        width: 24%;
+        height: 20vh;
+        background-color: #ffffff;
+        padding: 20px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        gap: 20px;
+      }
+
+      #box3-h6 {
+        color: #666666;
+        letter-spacing: 3px;
+        text-transform: uppercase;
+        font-weight: 500;
+        font-size: 10px;
+        margin: 0 auto;
+      }
+
+      #box3-h1 {
+        color: #f1bb13;
+        font-size: 4rem;
+        font-weight: 700;
+        margin: 19px auto 0;
+      }
+
+      .box4 {
+        width: 24%;
+        height: 20vh;
+        background-color: #ffffff;
+        padding: 20px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        gap: 20px;
+      }
+
+      #box4-h6 {
+        color: #666666;
+        letter-spacing: 3px;
+        text-transform: uppercase;
+        font-weight: 500;
+        font-size: 10px;
+        margin: 0 auto;
+      }
+
+      #box4-h1 {
+        color: #f1bb13;
+        font-size: 4rem;
+        font-weight: 700;
+        margin: 19px auto 0;
+      }
+    }
+  }
+
+  .lowerContainer {
+    width: 100%;
+    background-color: #34365a;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    padding: 30px;
+    .leftContainer {
+      width: 25%;
+      height: 60%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 50px;
+      #lower-h1 {
+        font-size: 2.25rem;
+        font-weight: 700;
+        color: #ffffff;
+      }
+
+      #lower-h3 {
+        font-weight: 700;
+        line-height: 1.8;
+        font-style: italic;
+        font-size: 1.125rem;
+        margin: 20px;
+        font-family: "Open Sans", sans-serif !important;
+        color: #ffffff;
+      }
+
+      #lower-p {
+        margin: 20px;
+        color: #ffffff;
+      }
+    }
+    .mid-container {
+      width: 30%;
+      height: 60%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      #mid-h6 {
+        text-transform: uppercase;
+        font-weight: 700;
+        font-size: 1.25rem;
+        margin: 20px;
+        color: #ffffff;
+        font-family: "Open Sans", sans-serif;
+      }
+
+      #mid-h5 {
+        margin: 20px;
+        color: #ffffff;
+        font-family: "Open Sans", sans-serif;
+      }
+
+      #mid-h3-2 {
+        color: #ffffff;
+        font-family: "Open Sans", sans-serif;
+        margin: 20px;
+      }
+
+      #mid-h5-2 {
+        color: #ffffff;
+        font-family: "Open Sans", sans-serif;
+        margin: 20px;
+      }
+
+      #mid-h3-3 {
+        color: #ffffff;
+        font-family: "Open Sans", sans-serif;
+        margin: 20px;
+      }
+      ul {
+        color: #ffffff;
+        margin: 3px;
+        list-style-type: none;
+      }
+    }
+  }
+
+  .right-container {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    align-items: center;
+    padding: 100px;
+    input {
+      width: 80%;
+      border-color: #ffffff;
+      stroke: #ffffff;
+      border-width: 2px;
+      background-color: #ffffff;
+      color: #878787;
+      padding: 10px 12px;
+    }
+    textarea {
+      width: 80%;
+      height: 30%;
+    }
+    button {
+      background-color:#f1bb13;
+      color:black;
+      border-radius: 50px;
+      height: 100px;
+      width: 50%;
+      text-transform: uppercase;
+      margin: 36px;
+    }
+  }
+}
+footer{
+  width: 100%;
+  height: 20vh;
+  background-color: #333333;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  h6{
+    color: #ffffff;
   }
 }
